# oxidize-pdf-dotnet

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_PROGRESS.md  README.md  RELEASE-NOTES-v0.13.0.md  RELEASE-NOTES-v0.14.0.md  RELEASE-NOTES-v0.15.0.md  RELEASE-NOTES-v0.16.0.md  RELEASE-NOTES-v0.16.1.md  RELEASE-NOTES-v0.4.0.md  RELEASE-NOTES-v0.5.0.md  RELEASE-NOTES-v0.6.0.md  SECURITY.md  SESSION_SUMMARY.md
.claude/: settings.local.json
.claude/commands/: cloud-infra.md  end-session.md  gitflow-check.md  gitflow-feature.md  gitflow-hotfix.md  gitflow-merge.md  gitflow-release.md  start-session.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check-core-update.yml  ci.yml  receive-core-update.yml  release.yml
docs/: COMPATIBILITY.md  FEATURE_PARITY.md  PARITY_SPEC.md  TDD_PLAN_PARSE_GAPS.md
dotnet/: OxidizePdf.sln
dotnet/OxidizePdf.NET.Benchmarks/: BenchmarkRunner.cs  FileResult.cs  (+5 more)
dotnet/OxidizePdf.NET.Benchmarks.Tests/: AdapterTests.cs  BenchmarkRunnerTests.cs  OxidizePdf.NET.Benchmarks.Tests.csproj  ReportWriterTests.cs  ResultsAggregatorTests.cs
native/: .bak_parser.rs  Cargo.toml
native/.cargo/: audit.toml
native/src/: annotations.rs  chunking.rs  cid_font.rs  columns.rs  document.rs  document_metadata.rs  forms.rs  graphics.rs  header_footer.rs  image.rs  layout.rs  lib.rs  lists.rs  measure.rs  operations.rs  page.rs  parser.rs  pipeline_config.rs  security.rs  semantic.rs  table.rs  tagged.rs  text.rs  text_validation.rs  types.rs
(+215 files in other folders)
