[package]
name = "oxidize-pdf-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["Santiago Fernández Muñoz"]
license = "AGPL-3.0"
description = "FFI bindings for oxidize-pdf - Memory-safe PDF extraction for .NET"
repository = "https://github.com/bzsanti/oxidize-pdf-dotnet"
keywords = ["pdf", "ffi", "dotnet", "csharp", "bindings"]
categories = ["api-bindings", "text-processing"]

[lib]
crate-type = ["cdylib"]  # C-compatible dynamic library
name = "oxidize_pdf_ffi"

[dependencies]
oxidize-pdf = "1.6.5"  # Core PDF library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
opt-level = 3           # Maximum optimization
strip = true            # Strip debug symbols
panic = "abort"         # Smaller binary size

[profile.dev]
opt-level = 0
debug = true
